Fixed QubeCRUDForm. Needs some work but works good now, and improved QubeContactForm

--- a/Templates/Website/qube/res/lang/Qube.en.txt
+++ b/Templates/Website/qube/res/lang/Qube.en.txt
@@ -5,3 +5,8 @@ FileUploadEmptyMessage   = The field <strong>{0}</strong> is required
 FileUploadErrorMessage   = The field <strong>{0}</strong> does not allow such file extension to be uploaded
 DropDownListEmptyMessage = The field <strong>{0}</strong> is required
 CommonSubmit = Submit
+CommonSend = Send
+CommonNew = New...
+CommonSave = Save
+CommonDelete = Delete
+CommonCancel = Cancel
