--- a/Templates/Website/qube/res/lang/Qube.es.txt
+++ b/Templates/Website/qube/res/lang/Qube.es.txt
@@ -5,3 +5,8 @@ FileUploadEmptyMessage   = El campo&nbsp;<strong>{0}</strong> es requerido
 FileUploadErrorMessage   = El campo&nbsp;<strong>{0}</strong> no permite subir ese tipo de archivo
 DropDownListEmptyMessage = El campo&nbsp;<strong>{0}</strong> es requerido
 CommonSubmit = Enviar
+CommonSend = Enviar
+CommonNew = Nuevo...
+CommonSave = Guardar
+CommonDelete = Borrar
+CommonCancel = Cancelar
